--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -51,28 +51,29 @@ Nous présentons dans cette section le modèle initial de carte de Kohonen et in
     \label{fig:topo}}
     \end{figure}
 
-\begin{figure}
-    \centering
-    \includegraphics{SOM.pdf}
-    \caption{\'Elements principaux composant une carte de Kohonen~: une carte possède un ensemble d'unités de poids $\omega$, indexées par une position $p$. En présence d'une entrée $X$, une activité $a$ ou une distance $d$ est calculée pour chaque unité par rapport à l'entrée. La \emph{Best Matching Unit}, abrégée en BMU, est calculée comme l'unité d'activité maximale sur les positions (ou de distance minimale). Sa position est notée $\bmu$ et son poids est $\w(\bmu)$.\label{fig:SOM}}
-    \end{figure}
+
+
+
+% \begin{figure}
+%     \centering
+%     \includegraphics{SOM.pdf}
+%     \caption{\'Eléments principaux composant une carte de Kohonen~: une carte possède un ensemble d'unités de poids $\omega$, indexées par une position $p$. En présence d'une entrée $X$, une activité $a$ ou une distance $d$ est calculée pour chaque unité par rapport à l'entrée. La \emph{Best Matching Unit}, abrégée en BMU, est calculée comme l'unité d'activité maximale sur les positions (ou de distance minimale). Sa position est notée $\bmu$ et son poids est $\w(\bmu)$.\label{fig:SOM}}
+    % \end{figure}
 
 Une carte de Kohonen est un algorithme de quantification vectorielle. 
 Les algorithmes de quantification vectorielle cherchent à représenter un ensemble de données d'entrées issues d'un espace $\mathcal{D}$ en un nombre fini de vecteurs de l'espace d'entrée, les prototypes.
-Une carte auto-organisatrice ajoute une topologie sur laquelle s'appuie cette représentation. Les prototypes $\w$ sont alors positionnés sur les n\oe{}uds d'un graphe, et indexés par une position $p$. 
-Ce graphe se présente comme une grille de faible dimension, en général une grille 2D, définissant une correspondance directe entre la dimension de la carte les positions $p$ des n\oe{}uds.
+Les cartes auto-organisatrices ajoutent une topologie sur laquelle s'appuie cette représentation de l'espace d'entrée. Les prototypes $\w$ sont alors positionnés sur les n\oe{}uds d'un graphe, et indexés par une position $p$. 
+Ce graphe se présente en général comme une grille de faible dimension, en général une grille 2D, définissant une correspondance directe entre la dimension de la carte et les positions $p$ des n\oe{}uds
 (\emph{mapping}). Des exemples de topologies de SOM 1D et 2D sont par exemple illustrées en figure~\ref{fig:topo}.
 
 Avant apprentissage, ces prototypes sont initialisés aléatoirement dans l'espace d'entrée.
 Une itération d'apprentissage comporte ensuite trois étapes~:
 \begin{enumerate}
 \item Une entrée $\inpx$ est présentée à toute la carte.
-\item Le n\oe{}ud ayant le prototype le plus proche de $\inpx$ selon une distance $d(\w, \inpx)$ est choisi comme \emph{Best Matching Unit} (BMU) de la carte. Son indice est noté $\bmu$. \begin{equation}
+\item Le n\oe{}ud ayant le prototype le plus proche de $\inpx$ selon une distance $d(\w, \inpx)$ est choisi comme \emph{Best Matching Unit} (BMU) de la carte. Son indice est noté $\bmu$. 
+\begin{equation}
     \bmu = \argmin\limits_p d(\w(p),\inpx)
 \end{equation}
-
-Ce calcul de distances, utilisé dans la version originale de SOM, est remplacé dans d'autres modèles de cartes par le calcul d'une \emph{activation} $a(p, \w, \inpx)$ liant les poids des n\oe{}uds et les entrées.
-La BMU est alors l'unité située au maximum de l'activation. Cette étape est résumée en figure~\ref{fig:SOM}.
 \item Le prototype du BMU $\w(\bmu)$ ainsi que les prototypes des n\oe{}uds voisins sont déplacés vers l'entrée $\inpx$. Le déplacement est pondéré par leur degré de proximité au BMU par une fonction de voisinage $H(p,\bmu)$
 \begin{equation} \forall p, \:\w(p) \leftarrow \w(p) + \alpha H(\bmu,p) \left( \inpx - \w(p)\right) \end{equation}
 $H$ définit l'amplitude de modification de chaque prototype $\w(p)$, en modulant le taux d'apprentissage $\alpha$ par $H(p,\bmu)$. $H$ est maximale à la position du BMU et décroissante autour de cette position, de sorte que les prototypes des n\oe{}uds les plus proches de $\bmu$ soient les plus influencés par le déplacement. Il s'agira par exemple d'une fonction rectangulaire, triangle ou gaussienne, illustrées en figure~\ref{fig:h}.
@@ -92,6 +93,20 @@ Le processus de mise à jour des poids d'une carte de Kohonen se traduit par un 
 \item Elle conserve les densités. Une zone dense de l'espace d'entrée $\mathcal{D}$ sera représentée par plus de prototypes au sein de la carte, qu'une zone de faible densité.
 \end{itemize}
 
+\begin{figure}
+    \centering\includegraphics[width=\textwidth]{activation.pdf}
+    \caption{Activation $a(p, \inpx)$ selon les valeurs de $\inpx \in [0,1]$ (en ordonnées) et $p \in [0,1]$ (en abscisse). \`A  $p$ fixé, $a(\inpx)$ correspond au champ récepteur gaussien (en bleu) du neurone situé en position $p$, de valeur préférentielle $\w(p)$, dont les valeurs sont tracées en bas).
+    \`A $\inpx$ fixé, $a(p)$ est l'activation de la carte, et le BMU est choisi comme le n\oe{}uds situé à l'argmax de cette activation. \label{fig:activation}
+    }
+\end{figure}
+
+Le calcul de distances, utilisé dans la version originale de SOM, est remplacé dans d'autres modèles de cartes par le calcul d'une \emph{activation} $a(p, \inpx)$ liant les poids des n\oe{}uds et les entrées, généralement gaussienne~:
+\begin{equation}\label{eq:activation}
+    a(p, \inpx) = \exp{-\frac{\lVert \inpx - \w(p)\rVert^2}{2\sigma^2}}
+\end{equation}
+Ce calcul d'activation est représenté en figure~\ref{fig:activation}, et s'apparente à la définition de champs récepteurs gaussiens pour chaque neurone de poids $\w(p)$, inspirée de la biologie.
+L'activation est ainsi un champ 2D, dépendant de $\inpx$ (en ordonnée) et de $p$ (en abscisse). \`A $p$ fixé, $a(\inpx)$ serait l'équivalent d'un champ récepteur gaussien, pour le neurone situé en $p$, tracé sur la figure par la courbe bleue. Le paramètre $\sigma$ intervenant dans l'équation détermine la largeur de cette gaussienne.
+Les valeurs d'activation que nous considérons pour le choix du BMU sont quant à elles $a(p)$, calculées à $\inpx$ fixé, tracées sur la figure par la courbe en rouge. La position du maximum de cette activation est utilisée comme Best Matching Unit.
 % Par exemple, la figure \ref{fig:digits} représente le dépliement d'une carte sur des imagettes de taille $28\times 28$. Par son aspect ordonné, une carte est une représentation en dimension 2 d'un espace d'entrée de grande dimension.
 
 \begin{figure}
@@ -143,7 +158,6 @@ Une carte de Kohonen ne doit cependant pas être considérée comme une modélis
 \centering
 \includegraphics[width=0.6\textwidth]{v1.jpg}
 \caption{Représentation des réponses du cortex visuel V1 à un stimulus visuel (bâtonnets d'orientations spatiales différentes). Les neurones répondant à une certaine orientation sont affichés de la même couleur. On observe une continuité entre les neurones proches dans le cortex et l'orientation à laquelle ils répondent. Cette propriété d'organisation est l'inspiration biologique des cartes de Kohonen.\label{fig:v1}}
-
 \end{figure}
 
 \subsection{Rétroactions dans le traitement de l'information multisensorielle du cortex}
