--- a/04-Representation/source.tex
+++ b/04-Representation/source.tex
@@ -297,7 +297,7 @@ Les deux mêmes valeurs d'entrée tracées en figure~\ref{fig:inputs} sont égal
 \subsection{Dépliement d'une carte dans l'espace d'entrée multimodal}
 
 Une des représentations classiques des cartes de Kohonen est de tracer les poids de la carte dans l'espace de ses entrées, telle qu'en figure de droite en~\ref{fig:representation}. Cette représentation permet de faire apparaître un dépliement des poids d'une carte sur ses entrées.
-De la même façon, nous voulons représenter comment chaque carte se déplie, non seulement sur ses entrées externes, mais dans l'espace multimodal, ce qui est possible à partir des échantillons de test.
+De la même façon, nous voulons représenter comment chaque carte se déplie, non sur ses seules entrées externes, mais dans tout l'espace multimodal, ce qui est possible à partir des échantillons de test.
 
 Nous proposons une façon de représenter le dépliement d'une seule carte de CxSOM dans l'espace global des entrées. Dans l'expérience illustrative, il s'agit donc de représenter comment une carte se déplie, mais dans l'espace 2D.
 Au lieu de s'appuyer sur les poids des cartes, nous utilisons les poids externes des BMU obtenus lors du test. Cette représentation est tracée en ~\ref{fig:distortion} pour l'exemple à deux cartes.
