--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -14,8 +14,7 @@ Dans cette optique, le chapitre~\ref{chap:architectures} se présente comme une 
 
 
 La première contribution de cette thèse est l'élaboration d'un nouveau modèle d'architecture, CxSOM.
-Dans CxSOM, nous avons choisi d'utiliser la position du BMU comme seule information transmise entre les cartes. Cette position est une valeur 1D ou 2D. 
-Cette position est légère dans les calculs, utilise pleinement les propriétés de représentation topographiquement ordonnée des cartes de Kohonen. Il s'agit de plus d'une valeur homogène entre tous les modules de l'architecture, quelles que soient les entrées externes de ces modules et leur architecture interne, comme leur nombre de couches.
+Dans CxSOM, nous avons choisi d'utiliser la position du BMU comme seule information transmise entre les cartes. Cette position est une valeur 1D ou 2D. Cette position est légère dans les calculs, utilise pleinement les propriétés de représentation topographiquement ordonnée des cartes de Kohonen. Il s'agit de plus d'une valeur homogène entre tous les modules de l'architecture, quelles que soient les entrées externes de ces modules et leur architecture interne, comme leur nombre de couches.
 La position du BMU a été utilisée en tant qu'information transmise entre cartes dans de nombreux travaux portant sur les architectures hiérarchiques de cartes comme HSOM \parencite{lampinen_clustering_1992}, cherchant à trouver des motifs dans les données à un niveau plus abstrait ou dans les cartes récurrentes comme SOMSD \parencite{hagenbuchner_self-organizing_2003}. 
 Ces travaux ont montré que la position du BMU est une information suffisante à transmettre entre cartes pour qu'elles puissent effectuer un apprentissage de façon conjointe.
 Aucun travail à notre connaissance n'avait utilisé uniquement la position du BMU comme interface pour construire des architectures de cartes comportant des rétroactions, ce qui a motivé les travaux proposés dans cette thèse.
@@ -77,9 +76,9 @@ Lors de cette thèse, nous avons défini une méthode d'analyse de la réponse d
 
 Les perspectives à court terme de ces travaux sont de continuer le développement du modèle en s'intéressant aux connexions au sein d'une architecture comportant plus de deux et trois cartes.
 Le nombre de connexions possible au sein d'une architecture comportant un nombre fixé de cartes croît exponentiellement avec le nombre de cartes et chaque configuration de connexions peut complètement modifier la façon dont se comporte l'architecture. Par ailleurs, certaines cartes peuvent ou non prendre des entrées externes, ajoutant un grand nombre de configurations possibles à explorer.
-Grâce à nos travaux, nous avons pu identifier les paramètres importants à utiliser dans l'architecture et les caractéristiques des cartes pertinentes à considérer pour étudier les comportements d'apprentissage de relations multimodales. 
-Nous disposons aussi d'une librairie performante pour construire des architectures de cartes, développée en parallèle de la thèse au sein de l'équipe de recherche.
-L'étude de plus grandes architectures devra se faire d'un point de vue plus global, en s'appuyant sur le comportement général de l'architecture et non seulement d'un point de vue d'une carte. 
+Grâce à nos travaux, nous avons pu identifier les paramètres importants à utiliser dans l'architecture et les caractéristiques des cartes pertinentes à considérer pour étudier les comportements d'apprentissage de relations multimodales. L'étude de plus grandes architectures devra se faire d'un point de vue plus global, en s'appuyant sur le comportement général de l'architecture et non seulement d'un point de vue d'une carte. 
+Non des moindres, les travaux d'analyse du comportement des architectures dont nous présentons ici les résultats ont été accompagnés d'un travail d'élaboration, en collaboration avec Hervé, d'une librairie C++ et python permettant la gestion des nombreuses variables d'état qui composent une architecture de cartes. Cette librairie est maintenue par Hervé Frezza-Buet \footnote{\href{https://github.com/HerveFrezza-Buet/cxsom}}. La mise en relation de nombreuses cartes est en effet 
+
 
 Il reste également à définir des cas d'études sur lesquels appliquer ces architectures à grande échelle.
 L'aspect modulaire de ces architectures pourrait par exemple nous faire envisager des modules d'interaction avec l'environnement, qui traitent les entrées sensorielles et des modules d'apprentissage, en s'inspirant des structures fonctionnelles observées en biologie \parencite{Ellefsen2015NeuralMH}. 
@@ -95,7 +94,6 @@ Une architecture de cartes pourrait par exemple apporter des modules de mémoire
 Une direction d'application d'architectures de cartes peut enfin être la construction d'un système d'apprentissage \og sur le long terme \fg{}, apprenant au cours du temps tout en étant capable de générer des prises de décision dans le système.
 
 
-Dernière phrase choc ?
 
 % Enfin, l'architecture que nous avons proposée s'appuie uniquement sur des cartes auto-organisatrices. Nous pouvons envisager de coupler les mécanismes induits par l'architecture de cartes à d'autres mécanismes d'apprentissage non-supervisés, comme de l'apprentissage par renforcement ou des auto-encodeurs.
 
